--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-rudra-saxena---full-stack-developer-portfolio",
+  "name": "rudra-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
